--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@emotion/native": "^11.0.0",
+    "@emotion/react": "^11.7.1",
+    "@os-team/i18next-react-native-language-detector": "^1.0.10",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "i18next": "^21.6.11",
+    "intl-pluralrules": "^1.3.1",
     "react": "17.0.2",
+    "react-i18next": "^11.15.4",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
-    "react-native-reanimated": "^2.4.1"
+    "react-native-reanimated": "^2.4.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
